--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+
+<head>
+	<title>Chinese Flash Card</title>
+	<meta name="description" content="Chinese Flash Card" />
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
+	<link rel="stylesheet" href="../public/style.css" type="text/css" />
+</head>
+
+<!DOCTYPE html>
+<html>
+  <body>
+    <div class="container">
+    <div id="card">
+      <p id="character">测</p>      
+    </div>
+      <button id="next-btn">NEXT</button>
+  </div>
+  </body>
+  <script src="../public/index.js"></script>
 </html>
