--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <button id="next-btn">NEXT</button>
         <button id="error-btn">ERROR</button>
       </div>
-      <div id="total">0</div>
+      <div class="statistics">
+        <div id="total">0</div><div id="learn">0</div>
+      </div>
     </div>
   </body>
   <script src="../public/index.js"></script>
