--- a/index.html
+++ b/index.html
@@ -15,23 +15,38 @@
 <html>
   <body>
     <div class="radio">
-      <input type="radio" id="charset1" name="char_set" value="1" checked >
+      <input type="radio" id="charsetnew" name="char_set" value="0">
+      <label for="charsetnew">NEW</label><br>
+      <input type="radio" id="charset1" name="char_set" value="1" checked>
       <label for="charset1">SET1</label><br>
       <input type="radio" id="charset2" name="char_set" value="2">
       <label for="charset2">SET2</label><br>
+      <input type="radio" id="charset3" name="char_set" value="3">
+      <label for="charset3">SET3</label><br>            
     </div>
     <div class="container">
       <div id="card">
-        <p id="character">中</p>      
+        <p id="character">中</p>
       </div>
       <div class="but">
         <button id="next-btn">NEXT</button>
-        <button id="error-btn">ERROR</button>
+        <button id="error-btn">LEARN</button>
       </div>
       <div class="statistics">
         <div id="total">0</div><div id="learn">0</div>
       </div>
     </div>
+    <div id="catImage">
+      <img id="cat1" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0146.gif" alt="cat1" >
+      <img id="cat2" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0024.gif" alt="cat2" >
+      <img id="cat3" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0058.gif" alt="cat3" >
+      <img id="cat4" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0150.gif" alt="cat4" >
+      <img id="cat5" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0149.gif" alt="cat5" >
+      <img id="cat6" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0061.gif" alt="cat6" >
+      <img id="cat7" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0139.gif" alt="cat7" >
+      <img id="cat8" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0154.gif" alt="cat8" >
+    </div>
+    <a id="song" href="https://www.youtube.com/watch?v=Ywgpv1pYvb4">Hello Kitty Song!</a>
   </body>
   <script src="../public/index.js"></script>
 </html>
