--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <div id="card">
         <p id="character">中</p>
       </div>
+      <div id="count">1</div>
+      <div id="pinyin">zhōng</div>
       <div class="but">
         <button id="next-btn">NEXT</button>
         <button id="error-btn">LEARN</button>
