--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <img id="cat8" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0154.gif" alt="cat8" >
     </div>
     <a id="song" href="https://www.youtube.com/watch?v=Ywgpv1pYvb4">Hello Kitty Song!</a>
+    <a href = "sa.html">Simple Arithmetic</a>
   </body>
   <script src="../public/index.js"></script>
 </html>
