--- a/sa.html
+++ b/sa.html
@@ -1,2 +1,80 @@
-<p>Simple Arithmetic</p>
-<a href = "index.html"></a>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>Simple Arithmetic</title>
+	<meta name="description" content="Simple Arithmetic" />
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
+	<link rel="stylesheet" href="../public/style1.css" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>Simple Arithmetic</h1>
+    <div class="container">
+      <div class="container1" id="ques">
+        <div class = "card">
+          <p id="number1">10</p>
+        </div>
+        <div class = "card_s">
+          <p id="arithmetic">+</p>
+        </div>                
+        <div class = "card">
+          <p id="number2">7</p>
+        </div>        
+      </div>
+      <div class="container1" id="illus">
+        <div class = "card" id="illus1">
+          <i class="fa fa-cloud"></i>
+          <i class="fa fa-circle"></i>
+          <i class="fa fa-leaf"></i>
+          <i class="fa fa-paw"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-tree"></i>
+          <i class="fa fa-subway"></i>
+          <i class="fa fa-train"></i>
+          <i class="fa fa-plane"></i>
+          <i class="fa fa-bicycle"></i>                  
+        </div>
+        <img id="happy" alt="happy" src="https://img.freepik.com/premium-vector/excitement-cat-vector-icon-illustration-clipart-design_574412-1145.jpg"></img>
+        <img id="sad" alt="sad" src="https://img.freepik.com/premium-vector/cat-vector-style-illustration_362642-6377.jpg"></img>
+        <div class = "card" id="illus2">
+          <i class="fa fa-bell"></i>
+          <i class="fa fa-coffee"></i>
+          <i class="fa fa-heart"></i>
+          <i class="fa fa-music"></i>
+          <i class="fa fa-gift"></i>
+          <i class="fa fa-umbrella"></i>
+          <i class="fa fa-circle"></i>          
+        </div>        
+      </div>
+      <div class="but">
+        <input type="button" id="A" value=17>
+        <input type="button" id="B" value=16>
+        <input type="button" id="C" value=18>
+        <input type="button" id="D" value=3>
+      </div>
+      <div class="statistics">
+        <div id="correct">0</div><div id="error">0</div>
+      </div>
+    </div>
+    <div id="catImage">
+      <img id="cat1" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0146.gif" alt="cat1" >
+      <img id="cat2" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0024.gif" alt="cat2" >
+      <img id="cat3" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0058.gif" alt="cat3" >
+      <img id="cat4" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0150.gif" alt="cat4" >
+      <img id="cat5" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0149.gif" alt="cat5" >
+      <img id="cat6" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0061.gif" alt="cat6" >
+      <img id="cat7" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0139.gif" alt="cat7" >
+      <img id="cat8" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0154.gif" alt="cat8" >
+    </div>
+    <a id="song" href="https://www.youtube.com/watch?v=Ywgpv1pYvb4">Hello Kitty Song!</a>
+    <a href="/">Chinese Character Game</a>
+  </body>
+  <script src="../public/sa.js"></script>
+</html>
