--- a/sa.html
+++ b/sa.html
@@ -72,7 +72,7 @@
       <img id="cat6" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0061.gif" alt="cat6" >
       <img id="cat7" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0139.gif" alt="cat7" >
       <img id="cat8" src="https://www.animatedimages.org/data/media/1250/animated-hello-kitty-image-0154.gif" alt="cat8" >
-      <a id="song" href="https://www.youtube.com/watch?v=Ywgpv1pYvb4">Hello Kitty Song!</a>
+      <a id="song" href="https://youtu.be/Ql8kUKyuHXc?si=KHETxueMr13Iixvi">Hello Kitty Song!</a>
     </div>    
     <a href="/">Chinese Character Game</a>
   </body>
