--- a/ec.html
+++ b/ec.html
@@ -24,7 +24,7 @@
       <li><a href="sudoku.html">Sudoku</a></li>
     </ul>
     <div class="radio">
-      <input type="radio" id="charset1" name="char_set" value="1" checked>
+	  <input type="radio" id="charset1" name="char_set" value="1" checked>
       <label for="charset1">SET1</label>
       <input type="radio" id="charset2" name="char_set" value="2" >
       <label for="charset2">SET2</label>
@@ -32,6 +32,8 @@
       <label for="charset3">SET3</label>
       <input type="radio" id="charset4" name="char_set" value="4">
       <label for="charset4">SET4</label>
+	</div>
+	<div class="radio" style="margin-top: 0px;" >
       <input type="radio" id="charset5" name="char_set" value="5">
       <label for="charset5">SET5</label>
       <input type="radio" id="charset6" name="char_set" value="6">
