--- a/ec.html
+++ b/ec.html
@@ -41,7 +41,9 @@
       <input type="radio" id="charset7" name="char_set" value="7">
       <label for="charset7">SET7</label>
       <input type="radio" id="charset8" name="char_set" value="8">
-      <label for="charset8">SET8</label>	  
+      <label for="charset8">SET8</label>
+	</div>
+	<div class="radio" style="margin-top: 0px;" >
       <input type="radio" id="charset9" name="char_set" value="MIX">
       <label for="charset9">MIX</label>		  
     </div>
@@ -84,7 +86,7 @@
 			  <div id="pimage"><img src="./public/image/cat.jpg"></img></div>
 		  </div>
 		  <div id="cat">
-			<img id="happy" alt="happy" src="https://img.freepik.com/premium-vector/excitement-cat-vector-icon-illustration-clipart-design_574412-1145.jpg"></img>
+			<img id="happy" alt="happy"></img>
 			<img id="sad" alt="sad" src="https://img.freepik.com/premium-vector/cat-vector-style-illustration_362642-6377.jpg"></img>
 		  </div>	  
 		  <div class="butvertical">
