--- a/logic.html
+++ b/logic.html
@@ -50,7 +50,7 @@
         <p id="D">5</p>
       </div>
       <div id="cat">
-        <img id="happy" alt="happy" src="https://img.freepik.com/premium-vector/excitement-cat-vector-icon-illustration-clipart-design_574412-1145.jpg"></img>
+        <img id="happy" alt="happy"></img>
         <img id="sad" alt="sad" src="https://img.freepik.com/premium-vector/cat-vector-style-illustration_362642-6377.jpg"></img>
       </div>
       <div class="statistics">
