--- a/sa.html
+++ b/sa.html
@@ -54,8 +54,8 @@
           <i class="fa fa-plane"></i>
           <i class="fa fa-bicycle"></i>                  
         </div>
-		<img id="happy" alt="happy" src="https://img.freepik.com/premium-vector/excitement-cat-vector-icon-illustration-clipart-design_574412-1145.jpg"></img>        
-        <img id="sad" alt="sad" src="https://img.freepik.com/premium-vector/cat-vector-style-illustration_362642-6377.jpg"></img>
+		<img id="happy" alt="happy"></img>        
+        <img id="sad" alt="sad" src="./public/reward/sadcat.jpg"></img>
         <div class = "card" id="illus2">
           <i class="fa fa-bell"></i>
           <i class="fa fa-coffee"></i>
