--- a/ec.html
+++ b/ec.html
@@ -22,6 +22,7 @@
       <li><a href="logic.html">Logic</a></li>
       <li><a href="ec.html" class="active" >EC</a></li>
       <li><a href="sudoku.html">Sudoku</a></li>
+	  <li><a href="spotdiff.html">SpotDiff</a></li>
     </ul>
     <div class="radio">
 	  <input type="radio" id="charset1" name="char_set" value="1" checked>
