--- a/sa.html
+++ b/sa.html
@@ -22,6 +22,7 @@
       <li><a href="logic.html">Logic</a></li>
       <li><a href="ec.html">EC</a></li>
       <li><a href="sudoku.html">Sudoku</a></li>
+	  <li><a href="spotdiff.html">SpotDiff</a></li>
     </ul>    
     <h1>Simple Arithmetic</h1>
     <div class = slider>
