--- a/sudoku.html
+++ b/sudoku.html
@@ -22,6 +22,7 @@
       <li><a href="logic.html">Logic</a></li>
       <li><a href="ec.html">EC</a></li>
       <li><a class="active" href="sudoku.html">Sudoku</a></li>
+	  <li><a href="spotdiff.html">SpotDiff</a></li>
     </ul>
     <h1>Sudoku Game</h1>  
     <div class="container">
