--- a/logic.html
+++ b/logic.html
@@ -22,6 +22,7 @@
       <li><a class="active" href="logic.html">Logic</a></li>
       <li><a href="ec.html">EC</a></li>
       <li><a href="sudoku.html">Sudoku</a></li>
+	  <li><a href="spotdiff.html">SpotDiff</a></li>
     </ul>        
     <h1>Logic Game</h1>
     <div class="radio">
