--- a/logic.html
+++ b/logic.html
@@ -23,6 +23,7 @@
       <li><a href="ec.html">EC</a></li>
       <li><a href="sudoku.html">Sudoku</a></li>
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
+	  <li><a href="jigsaw.html">Jigsaw</a></li>
     </ul>        
     <h1>Logic Game</h1>
     <div class="radio">
