--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <li><a href="logic.html">Logic</a></li>
       <li><a href="ec.html">EC</a></li>
       <li><a href="sudoku.html">Sudoku</a></li>
+	  <li><a href="spotdiff.html">SpotDiff</a></li>
+	  <li><a href="jigsaw.html">Jigsaw</a></li>
     </ul>
     <div class="radio">
       <input type="radio" id="charsetnew" name="char_set" value="0">
