--- a/spotdiff.html
+++ b/spotdiff.html
@@ -23,6 +23,7 @@
       <li><a href="ec.html">EC</a></li>
       <li><a href="sudoku.html">Sudoku</a></li>
 	  <li><a class="active" href="spotdiff.html">SpotDiff</a></li>
+	  <li><a href="jigsaw.html">Jigsaw</a></li>
     </ul>
     <h1>Spot The Difference</h1>  
     <div class="container">
