--- a/jigsaw.html
+++ b/jigsaw.html
@@ -23,6 +23,7 @@
       <li><a href="sudoku.html">Sudoku</a></li>
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
 	  <li><a class="active" href="jigsaw.html">Jigsaw</a></li>
+	  <li><a href="memory.html">Memory</a></li>
     </ul>
     <div class="container" style="margin-top: 70px">
       <div id="container1">
