--- a/ec.html
+++ b/ec.html
@@ -24,6 +24,7 @@
       <li><a href="sudoku.html">Sudoku</a></li>
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
 	  <li><a href="jigsaw.html">Jigsaw</a></li>
+	  <li><a href="memory.html">Memory</a></li>
     </ul>
     <div class="radio">
 	  <input type="radio" id="charset1" name="char_set" value="1" checked>
