--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="sudoku.html">Sudoku</a></li>
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
 	  <li><a href="jigsaw.html">Jigsaw</a></li>
+	  <li><a href="memory.html">Memory</a></li>
     </ul>
     <div class="radio">
       <input type="radio" id="charsetnew" name="char_set" value="0">
