--- a/sudoku.html
+++ b/sudoku.html
@@ -24,6 +24,7 @@
       <li><a class="active" href="sudoku.html">Sudoku</a></li>
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
 	  <li><a href="jigsaw.html">Jigsaw</a></li>
+	  <li><a href="memory.html">Memory</a></li>
     </ul>
     <h1>Sudoku Game</h1>  
     <div class="container">
