update memory game

--- a/memory.html
+++ b/memory.html
@@ -47,6 +47,7 @@
       </div> 
       <div class="statistics">
         <div id="total">0</div>
+		<div id="totalClick">0</div>
       </div>
     </div>
     <div id="reward">
