added maze game

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
 	  <li><a href="jigsaw.html">Jigsaw</a></li>
 	  <li><a href="memory.html">Memory</a></li>
+	  <li><a href="maze.html">Maze</a></li>
     </ul>
     <div class="radio">
       <input type="radio" id="charsetnew" name="char_set" value="0">
