--- a/jigsaw.html
+++ b/jigsaw.html
@@ -24,6 +24,7 @@
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
 	  <li><a class="active" href="jigsaw.html">Jigsaw</a></li>
 	  <li><a href="memory.html">Memory</a></li>
+	  <li><a href="maze.html">Maze</a></li>
     </ul>
     <div class="container" style="margin-top: 70px">
       <div id="container1">
