--- a/sudoku.html
+++ b/sudoku.html
@@ -10,7 +10,6 @@
   <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="./public/common.css" type="text/css" />
   <link rel="stylesheet" href="./public/sudoku.css" type="text/css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <!DOCTYPE html>
@@ -25,6 +24,7 @@
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
 	  <li><a href="jigsaw.html">Jigsaw</a></li>
 	  <li><a href="memory.html">Memory</a></li>
+	  <li><a href="maze.html">Maze</a></li>
     </ul>
     <h1>Sudoku Game</h1>  
     <div class="container">
