--- a/ec.html
+++ b/ec.html
@@ -25,6 +25,7 @@
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
 	  <li><a href="jigsaw.html">Jigsaw</a></li>
 	  <li><a href="memory.html">Memory</a></li>
+	  <li><a href="maze.html">Maze</a></li>
     </ul>
     <div class="radio">
 	  <input type="radio" id="charset1" name="char_set" value="1" checked>
