--- a/memory.html
+++ b/memory.html
@@ -25,6 +25,7 @@
 	  <li><a href="spotdiff.html">SpotDiff</a></li>
 	  <li><a href="jigsaw.html">Jigsaw</a></li>
 	  <li><a class="active" href="memory.html">Memory</a></li>
+	  <li><a href="maze.html">Maze</a></li>
     </ul>
     <h1>Memory Game</h1>  
     <div class="container">
