--- a/spotdiff.html
+++ b/spotdiff.html
@@ -25,6 +25,7 @@
 	  <li><a class="active" href="spotdiff.html">SpotDiff</a></li>
 	  <li><a href="jigsaw.html">Jigsaw</a></li>
 	  <li><a href="memory.html">Memory</a></li>
+	  <li><a href="maze.html">Maze</a></li>
     </ul>
     <h1>Spot The Difference</h1>  
     <div class="container">
