--- a/maze.html
+++ b/maze.html
@@ -30,78 +30,6 @@
     <h1>Maze Game</h1>  
     <div class="container">
 	    <div id="container1">
-			<div class = "grid" id="1"></div>
-			<div class = "grid" id="2"></div>
-			<div class = "grid" id="3"></div>
-			<div class = "grid" id="4"></div>
-			<div class = "grid" id="5"></div>
-			<div class = "grid" id="6"></div>
-			<div class = "grid" id="7"></div>
-			<div class = "grid" id="8"></div>
-			<div class = "grid" id="9"></div>
-			<div class = "grid" id="10"></div>
-			<div class = "grid" id="11"></div>
-			<div class = "grid" id="12"></div>
-			<div class = "grid" id="13"></div>
-			<div class = "grid" id="14"></div>
-			<div class = "grid" id="15"></div>			
-			<div class = "grid" id="16"></div>
-			<div class = "grid" id="17"></div>
-			<div class = "grid" id="18"></div>
-			<div class = "grid" id="19"></div>
-			<div class = "grid" id="20"></div>
-			<div class = "grid" id="21"></div>
-			<div class = "grid" id="22"></div>
-			<div class = "grid" id="23"></div>
-			<div class = "grid" id="24"></div>
-			<div class = "grid" id="25"></div>
-			<div class = "grid" id="26"></div>
-			<div class = "grid" id="27"></div>
-			<div class = "grid" id="28"></div>
-			<div class = "grid" id="29"></div>
-			<div class = "grid" id="30"></div>
-			<div class = "grid" id="31"></div>
-			<div class = "grid" id="32"></div>
-			<div class = "grid" id="33"></div>			
-			<div class = "grid" id="34"></div>
-			<div class = "grid" id="35"></div>
-			<div class = "grid" id="36"></div>	
-			<div class = "grid" id="1"></div>
-			<div class = "grid" id="2"></div>
-			<div class = "grid" id="3"></div>
-			<div class = "grid" id="4"></div>
-			<div class = "grid" id="5"></div>
-			<div class = "grid" id="6"></div>
-			<div class = "grid" id="7"></div>
-			<div class = "grid" id="8"></div>
-			<div class = "grid" id="9"></div>
-			<div class = "grid" id="10"></div>
-			<div class = "grid" id="11"></div>
-			<div class = "grid" id="12"></div>
-			<div class = "grid" id="13"></div>
-			<div class = "grid" id="14"></div>
-			<div class = "grid" id="15"></div>			
-			<div class = "grid" id="16"></div>
-			<div class = "grid" id="17"></div>
-			<div class = "grid" id="18"></div>
-			<div class = "grid" id="19"></div>
-			<div class = "grid" id="20"></div>
-			<div class = "grid" id="21"></div>
-			<div class = "grid" id="22"></div>
-			<div class = "grid" id="23"></div>
-			<div class = "grid" id="24"></div>
-			<div class = "grid" id="25"></div>
-			<div class = "grid" id="26"></div>
-			<div class = "grid" id="27"></div>
-			<div class = "grid" id="28"></div>
-			<div class = "grid" id="29"></div>
-			<div class = "grid" id="30"></div>
-			<div class = "grid" id="31"></div>
-			<div class = "grid" id="32"></div>
-			<div class = "grid" id="33"></div>			
-			<div class = "grid" id="34"></div>
-			<div class = "grid" id="35"></div>
-			<div class = "grid" id="36"></div>			
 		</div>
 		<div class="but" id="direction">
 			<p id="up"><i class="fa fa-arrow-up"></i></p>
@@ -129,6 +57,5 @@
     </div>
   </body>
   <script src="./public/reward.js"></script>
-  
-
+  <script src="./public/maze.js"></script>
 </html>
