--- a/piano.html
+++ b/piano.html
@@ -17,126 +17,129 @@
   <body>
     <script src="./public/ul.js"></script>
     <h1>Piano Game</h1>  
-    <div class="container">
+    <div class="container1">
+		<div id = "sheet">
+			A Bb C D# E F G C C D D A A E A Bb C D# E♭ F G C C D D A A E A Bb C D# E F G C C D D A A E A Bb C D# E F G C C D D A A E A Bb C D# E F G C C D D A A E
+		</div>
 		<div id="piano">
 		  <div class="piano">
 			<div class="piano--black-keys">
 			  <ul>
 				<li class="key key-left key--left">
-				  <span class="black-key" data-key="83" data-note="1cis"></span>
+				  <span class="black-key" data-note="Db2"><span class="note">C# D♭</span></span>
 				</li>
 				<li class="key key-right key--right">
-				  <span class="black-key" data-key="68" data-note="1dis"></span>
+				  <span class="black-key" data-note="Eb2"><span class="note">D# E♭</span></span>
 				</li>
 				<li></li>
 				<li class="key key-left">
-				  <span class="black-key" data-key="50" data-note="1fis"></span>
+				  <span class="black-key" data-note="Gb2"><span class="note">F# G♭</span></span>
 				</li>
 				<li class="key">
-				  <span class="black-key" data-key="51" data-note="1gis"></span>
+				  <span class="black-key" data-note="Ab2"><span class="note">G# A♭</span></span>
 				</li>
 				<li class="key key-right">
-				  <span class="black-key" data-key="52" data-note="2ais"></span>
+				  <span class="black-key" data-note="Bb2"><span class="note">A# B♭</span></span>
 				</li>
 				<li></li>
 				<li class="key key-left key--left">
-				  <span class="black-key" data-key="54" data-note="2cis"></span>
+				  <span class="black-key" data-note="Db3"><span class="note">C# D♭</span></span>
 				</li>
 				<li class="key key-right key--right">
-				  <span class="black-key" data-key="55" data-note="2dis"></span>
+				  <span class="black-key" data-note="Eb3"><span class="note">D# E♭</span></span>
 				</li>
 				<li></li>
 				<li class="key key-left">
-				  <span class="black-key" data-key="57" data-note="2fis"></span>
+				  <span class="black-key" data-note="Gb3"><span class="note">F# G♭</span></span>
 				</li>
 				<li class="key">
-				  <span class="black-key" data-key="48" data-note="2gis"></span>
+				  <span class="black-key" data-note="Ab3"><span class="note">G# A♭</span></span>
 				</li>
 				<li class="key key-right">
-				  <span class="black-key" data-key="187" data-note="3ais"></span>
+				  <span class="black-key" data-note="Bb3"><span class="note">A# B♭</span></span>
 				</li>
 				<li></li>
 				<li class="key key-left key--left">
-				  <span class="black-key" data-key="70" data-note="3cis"></span>
+				  <span class="black-key" data-note="Db4"><span class="note">C# D♭</span></span>
 				</li>
 				<li class="key key-right key--right">
-				  <span class="black-key" data-key="71" data-note="3dis"></span>
+				  <span class="black-key" data-note="Eb4"><span class="note">D# E♭</span></span>
 				</li>
 				<li></li>
 				<li class="key key-left">
-				  <span class="black-key" data-key="74" data-note="3fis"></span>
+				  <span class="black-key" data-note="Gb4"><span class="note">F# G♭</span></span>
 				</li>
 				<li class="key">
-				  <span class="black-key" data-key="75" data-note="3gis"></span>
+				  <span class="black-key" data-note="Ab4"><span class="note">G# A♭</span></span>
 				</li>
 				<li class="key key-right">
-				  <span class="black-key" data-key="76" data-note="4ais"></span>
+				  <span class="black-key" data-note="Bb4"><span class="note">A# B♭</span></span>
 				</li>
 			  </ul>
 			</div>
 			<ul class="piano--white-keys">
 			  <li class="key">
-				<span class="white-key" data-key="90" data-note="1c"></span>
+				<span class="white-key" data-note="C2"><span class="note">C</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="88" data-note="1d"></span>
+				<span class="white-key" data-note="D2"><span class="note">D</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="67" data-note="1e"></span>
+				<span class="white-key" data-note="E2"><span class="note">E</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="81" data-note="1f"></span>
+				<span class="white-key" data-note="F2"><span class="note">F</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="87" data-note="1g"></span>
+				<span class="white-key" data-note="G2"><span class="note">G</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="69" data-note="2a"></span>
+				<span class="white-key" data-note="A2"><span class="note">A</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="82" data-note="2b"></span>
+				<span class="white-key" data-note="B2"><span class="note">B</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="84" data-note="2c"></span>
+				<span class="white-key" data-note="C3"><span class="note">C</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="89" data-note="2d"></span>
+				<span class="white-key" data-note="D3"><span class="note">D</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="85" data-note="2e"></span>
+				<span class="white-key" data-note="E3"><span class="note">E</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="73" data-note="2f"></span>
+				<span class="white-key" data-note="F3"><span class="note">F</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="79" data-note="2g"></span>
+				<span class="white-key" data-note="G3"><span class="note">G</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="80" data-note="3a"></span>
+				<span class="white-key" data-note="A3"><span class="note">A</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="219" data-note="3b"></span>
+				<span class="white-key" data-note="B3"><span class="note">B</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="221" data-note="3c"></span>
+				<span class="white-key" data-note="C4"><span class="note">C</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="86" data-note="3d"></span>
+				<span class="white-key" data-note="D4"><span class="note">D</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="66" data-note="3e"></span>
+				<span class="white-key" data-note="E4"><span class="note">E</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="78" data-note="3f"></span>
+				<span class="white-key" data-note="F4"><span class="note">F</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="77" data-note="3g"></span>
+				<span class="white-key" data-note="G4"><span class="note">G</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="188" data-note="4a"></span>
+				<span class="white-key" data-note="A4"><span class="note">A</span></span>
 			  </li>
 			  <li class="key">
-				<span class="white-key" data-key="190" data-note="4b"></span>
+				<span class="white-key" data-note="B4"><span class="note">B</span></span>
 			  </li>
 			</ul>
 		  </div>
