--- a/ec.html
+++ b/ec.html
@@ -17,6 +17,23 @@
 <html>
   <body>
     <script src="./public/ul.js"></script>
+	<div class="but" style="margin-top: 50px;" >
+		<select  name="char_set" id="selSet">
+			<option value="1" selected="selected">SET1</option>
+			<option value="2" >SET2</option>
+			<option value="3" >SET3</option>
+			<option value="4" >SET4</option>
+			<option value="5" >SET5</option>
+			<option value="6" >SET6</option>
+			<option value="7" >SET7</option>
+			<option value="8" >SET8</option>
+			<option value="9" >SET9</option>
+			<option value="10" >SET10</option>
+			<option value="11" >SET11</option>
+			<option value="MIX" >MIX</option>
+		</select>
+	</div>
+	<!--	
     <div class="radio">
 	  <input type="radio" id="charset1" name="char_set" value="1" checked>
       <label for="charset1">SET1</label>
@@ -40,7 +57,7 @@
 	<div class="radio" style="margin-top: 0px;" >
       <input type="radio" id="charset9" name="char_set" value="MIX">
       <label for="charset9">MIX</label>		  
-    </div>
+    </div> --!>
     <div class="radio" style="margin-top: 5px;" id="check">
       <input type="checkbox" id="check1" name="check_set" value="1" checked>
       <label for="check1">SET1</label>
@@ -57,7 +74,11 @@
       <input type="checkbox" id="check7" name="check_set" value="7">
       <label for="check7">SET7</label>
       <input type="checkbox" id="check8" name="check_set" value="8">
-      <label for="check8">SET8</label>	  
+      <label for="check8">SET8</label>
+      <input type="checkbox" id="check9" name="check_set" value="9">
+      <label for="check9">SET9</label>
+      <input type="checkbox" id="check10" name="check_set" value="10">
+      <label for="check10">SET10</label>		  
     </div>	
     <div class="radio" style="margin-top: 10px; width: auto;">
       <input type="radio" id="learnSel" name="learn_play" value="1" checked>
