--- a/draw.html
+++ b/draw.html
@@ -171,7 +171,7 @@
 		<div id="save">Save</div>
 	</div>  
 	<div class="but" style="margin-top: 10px;">
-	<canvas touch-action="none" pointer-events="none" id="myCanvas" width="400" height="600" style="border:2px solid blue; border-radius: 10px;"></canvas>
+		<canvas width=400 height=600 id="myCanvas"></canvas>
 	</div>		
     </div>
   </body>
