--- a/draw.html
+++ b/draw.html
@@ -170,7 +170,7 @@
 		<div id="clearCanvas">Clear</div>
 		<div id="save">Save</div>
 	</div>  
-	<div class="but" style="margin-top: 10px;" id="canvasDiv">
+	<div class="but" style="margin-top: 10px;">
 		<canvas width=400 height=600 id="myCanvas"></canvas>
 	</div>		
     </div>
