--- a/clock.html
+++ b/clock.html
@@ -17,10 +17,9 @@
 <html>
   <body>
     <script src="./public/ul.js"></script>
-    <h1>Clock Game</h1>  
     <div class="container">
-		<div class="but" style="margin-top: 10px;">
-			<canvas width=400 height=400 id="myCanvas" style="background-color:skyblue"></canvas>
+		<div class="but" style="margin-top: 60px;">
+			<canvas width=300 height=300 id="myCanvas" style="background-color:skyblue"></canvas>
 		</div>	
       <div class="but" id="choice">
         <input type="button" id="A" value=''>
@@ -29,11 +28,9 @@
         <input type="button" id="D" value=''>
       </div>	  
       <div id="cat">
-        <img id="happy" alt="happy" style="visibility: visible; width:120px; height:120px"></img>
-      </div>	 	  
-      <div class="but">
-        <div><p id="newGame">New Game</p></div> <div></div>
-      </div>	  	  
+        <img id="happy" alt="happy" style="width:120px; height:120px"></img>
+		<img id="sad" alt="sad" src="./public/reward/sadcat.jpg" style="width:120px; height:120px"></img>
+      </div>  	  
       <div class="statistics">
         <div id="correct">0</div>
 		<div id="error">0</div>
