--- a/ec.html
+++ b/ec.html
@@ -71,7 +71,7 @@
 		  </div>
 		  <div id="cat">
 			<img id="happy" alt="happy"></img>
-			<img id="sad" alt="sad" src="https://img.freepik.com/premium-vector/cat-vector-style-illustration_362642-6377.jpg"></img>
+			<img id="sad" alt="sad" src="./public/reward/sadcat.jpg"></img>
 		  </div>	  
 		  <div class="butvertical">
 			<input type="button" id="A" value="Cat">
