--- a/clock.html
+++ b/clock.html
@@ -20,7 +20,8 @@
     <div class="container">
 		<div class="but" style="margin-top: 60px;">
 			<canvas width=300 height=300 id="myCanvas" style="background-color:skyblue"></canvas>
-		</div>	
+			<input type="checkbox" id="showNum" checked>
+		</div>			
       <div class="but" id="choice">
         <input type="button" id="A" value=''>
         <input type="button" id="B" value=''>
