--- a/ec.html
+++ b/ec.html
@@ -10,7 +10,7 @@
 	<link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="./public/common.css" type="text/css" />
-	<link rel="stylesheet" href="./public/style3.css" type="text/css" />
+	<link rel="stylesheet" href="./public/ec.css" type="text/css" />
 </head>
 
 <!DOCTYPE html>
