--- a/sa.html
+++ b/sa.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
   <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="./public/common.css" type="text/css" />
-	<link rel="stylesheet" href="./public/style1.css" type="text/css" />
+	<link rel="stylesheet" href="./public/sa.css" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
