--- a/piano.html
+++ b/piano.html
@@ -145,7 +145,7 @@
 		<div class="but">
 			<select  name="song" id="selSong">
 				<option value=-1 selected="selected">Select Song</option>
-			</div>
+			</select>
 		</div>		
     </div>
 	
