--- a/read.html
+++ b/read.html
@@ -25,6 +25,8 @@
 		<div id="learn">
 		  <div class="butvertical" id="syl" ></div>
 		  <div class="butvertical" id="learnE"></div>
+		  <div class="butvertical" id="learnE1"></div>
+		  <div class="butvertical" id="learnE2"></div>
 		</div>	
     </div>
   </body>
