--- a/slider.html
+++ b/slider.html
@@ -18,19 +18,21 @@
     <script src="./public/ul.js"></script>
     <h1>Slider Game</h1>  
       <div class="container">
-	  <div id="container1">
-		<div class="grid size9" id="0A"><img id="0" class="bee" src="./public/image/memory/118.png" style="background-color: skyblue"></div>
-		<div class="grid size9" id="1A"><img id="1" class="bee" src="./public/image/memory/118.png" style="background-color: pink"></div>
-		<div class="grid size9" id="1A"><img id="1" class="target" src="./public/image/memory/150.png"></div>
-		<div class="grid size9" id="2A"><img id="2" class="target" src="./public/image/memory/104.png"></div>
-		<div class="grid size9" id="3A"><img id="3" class="target" src="./public/image/memory/106.png"></div>
-		<div class="grid size9" id="4A"><img id="4" class="bee" src="./public/image/memory/118.png" style="background-color: purple"></div>
-		<div class="grid size9" id="5A"><img id="5" class="bee" src="./public/image/memory/118.png" style="background-color: yellow"></div>
-		<div class="grid size9" id="6A"><img id="6" class="target" src="./public/image/memory/103.png"><img id="5" class="bee" src="./public/image/memory/118.png" style="background-color: yellow"></div>
-		<div class="grid size9" id="7A"></div>
+	  <div id="container1" style="display: relative">
+		<svg  width=370 height=370 id="mySvg"></svg>
       </div>
+	  <!--<img src="./public/image/memory/118.png" style="visibility:visible; height: 200px; width: 200px; background-color:orchid"/>--!>
       <div class="but">	    
         <div><p id="newGame">New Game</p></div>	
+		<div class="dropdown">
+			<p id="diff">Difficulty<i class="fa fa-caret-down"></i></p>
+			<div class="dropdown-content">
+			  <p id="kids" style="background-color:pink">0</p>
+			  <p id="easy">1</p>
+			  <p id="medium">2</p>
+			  <p id="hard">3</p>
+			</div>
+		</div>		
       </div> 
       <div class="statistics">
         <div id="total">0</div>
