--- a/maze1.html
+++ b/maze1.html
@@ -19,8 +19,16 @@
     <script src="./public/ul.js"></script>
     <h1>Maze Game</h1>  
     <div class="container">
-	    <div id="container1" style="display: relative">			
+	    <div id="container1">
 		</div>
+		<!--
+		<div class="but" id="direction">
+			<p id="up"><i class="fa fa-arrow-up"></i></p>
+			<p id="down"><i class="fa fa-arrow-down"></i></p>
+			<p id="left"><i class="fa fa-arrow-left"></i></p>
+			<p id="right"><i class="fa fa-arrow-right"></i></p>
+		</div>		
+		!-->
 		<div class="but">
 		<div class="dropdown">
 			<p id="diff">Difficulty<i class="fa fa-caret-down"></i></p>
