update ec, sudoku

--- a/slider.html
+++ b/slider.html
@@ -25,10 +25,10 @@
       <div class="but">	    
         <div><p id="newGame">New Game</p></div>	
 		<div class="dropdown">
-			<p id="diff">Difficulty<i class="fa fa-caret-down"></i></p>
+			<p id="diff">Difficulty +</p>
 			<div class="dropdown-content">
-			  <p id="kids" style="background-color:pink">0</p>
-			  <p id="easy">1</p>
+			  <p id="kids">0</p>
+			  <p id="easy" style="background-color:pink">1</p>
 			  <p id="medium">2</p>
 			  <p id="hard">3</p>
 			</div>
