--- a/sudoku.html
+++ b/sudoku.html
@@ -159,7 +159,7 @@
       <div class="but">
         <div><p id="newGame">New Game</p></div> <div></div>
 		<div class="dropdown">
-			<p id="diff">Difficulty<i class="fa fa-caret-down"></i></p>
+			<p id="diff">Difficulty +</p>
 			<div class="dropdown-content">
 			  <p id="kids" style="background-color:pink">0</p>
 			  <p id="easy">1</p>
