--- a/old_maze.html
+++ b/old_maze.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
   <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="./public/common.css" type="text/css" />
-  <link rel="stylesheet" href="./public/maze.css" type="text/css" />
+  <link rel="stylesheet" href="./public/old_maze.css" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -48,5 +48,5 @@
     </div>
   </body>
   <script src="./public/reward.js"></script>
-  <script src="./public/maze.js"></script>
+  <script src="./public/old_maze.js"></script>
 </html>
