--- a/draw.html
+++ b/draw.html
@@ -20,7 +20,7 @@
 	<div class="but" style="margin-top: 40px;">
 		<div class="dropdown">		
 			<div id="colorPicker"></div>
-			<div class="dropdown-content">
+			<div id="content">
 			<div class="colorPicker" style="margin-top: 10px;">
 			  <img style="margin-right:2px; width: 234px" src="./public/image/img_colormap.png" usemap="#colormap">
 			  <map id="colormap" name="colormap">
@@ -159,7 +159,7 @@
 			<svg id="thickness">
 				<circle r="2" cx="40" cy="20" fill="blue" />
 			</svg>
-			<div class="dropdown-content1">
+			<div id="content1">
 				<svg onclick="clickLine(2)"><circle r="1" cx="40" cy="20" fill="blue" /></svg>
 				<svg onclick="clickLine(4)"><circle r="2" cx="40" cy="20" fill="blue" /></svg>
 				<svg onclick="clickLine(8)"><circle r="4" cx="40" cy="20" fill="blue" /></svg>
