--- a/payment.html
+++ b/payment.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Payment Game</title>
-	<meta name="description" content="English/Chinese" />
+	<meta name="description" content="Payment Game" />
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
