--- a/sight_words.html
+++ b/sight_words.html
@@ -22,10 +22,13 @@
 		</select>
 	</div>
     <div class="container">
+		<div id="highlight" class="but">
+		</div>	
 		<div id="learn">
 		  <div class="butvertical" id="learnE"></div>
 		  <div class="butvertical" id="learnE1"></div>
-		</div>	
+		</div>
+
     </div>
   </body>
   <script src="./public/sightwords.js"></script>
