--- a/ec.html
+++ b/ec.html
@@ -58,8 +58,7 @@
     <div class="container">
 		<div id="learn">
 		  <div class="butvertical" id="learnC"></div>	  
-		  <div class="butvertical" id="limage">
-		  </div>
+		  <div class="butvertical" id="limage"></div>
 		  <div class="butvertical" id="learnE"></div>
 		</div>	
 		<div id="play">
