--- a/clock.html
+++ b/clock.html
@@ -18,24 +18,49 @@
   <body>
     <script src="./public/ul.js"></script>
     <div class="container">
-		<div class="but" style="margin-top: 40px;">
-			<canvas width=300 height=300 id="myCanvas" style="background-color:skyblue"></canvas>
-			<input type="checkbox" id="showNum" checked>
+    <div class="radio" style="margin-top: 40px; width: auto;">
+      <input type="radio" id="learnSel" name="learn_play" value="1" checked>
+      <label for="learnSel">Learn</label>
+      <input type="radio" id="playSel" name="learn_play" value="2" >
+      <label for="playSel">Play</label>
+	  <input type="checkbox" id="showNum" checked>
+    </div>		
+		<div class="but" style="margin-top: 10px;">
+			<canvas width=300 height=300 id="myCanvas" style="background-color:skyblue"></canvas>			
 		</div>			
-      <div class="but" id="choice">
-        <input type="button" id="A" value=''>
-        <input type="button" id="B" value=''>
-        <input type="button" id="C" value=''>
-        <input type="button" id="D" value=''>
-      </div>	  
-      <div id="cat">
-        <img id="happy" alt="happy" style="width:120px; height:120px"></img>
-		<img id="sad" alt="sad" src="./public/reward/sadcat.jpg" style="width:120px; height:120px"></img>
-      </div>  	  
-      <div class="statistics">
-        <div id="correct">0</div>
-		<div id="error">0</div>
-      </div>
+		<div id="learn">
+			<div class="learn_internal">
+				<p id = "hh">12</p>
+				<div class="learn_but">
+					<input type="button" id="hplus" value='+'>
+					<input type="button" id="hminus" value='-'>
+				</div>
+			</div>
+			<p style="font-size: 30px; margin-top: 10px">:</p>
+			<div class="learn_internal">
+				<p id="mm">00</p>
+				<div class="learn_but">
+					<input type="button" id="mplus" value='+'>
+					<input type="button" id="mminus" value='-'>
+				</div>
+			</div>
+		</div>
+		<div id="play">
+			<div class="but" id="choice">
+				<input type="button" id="A" value=''>
+				<input type="button" id="B" value=''>
+				<input type="button" id="C" value=''>
+				<input type="button" id="D" value=''>
+			</div>	
+			<div id="cat">
+				<img id="happy" alt="happy" style="width:120px; height:120px"></img>
+				<img id="sad" alt="sad" src="./public/reward/sadcat.jpg" style="width:120px; height:120px"></img>
+			</div>  	  
+			<div class="statistics">
+				<div id="correct">0</div>
+				<div id="error">0</div>
+			</div>
+		</div>
     </div>
     <div id="reward">
     </div>
