--- a/draw.html
+++ b/draw.html
@@ -169,6 +169,7 @@
 		</div>
 		<div id="clearCanvas">Clear</div>
 		<div id="save">Save</div>
+		<input type="checkbox" id="showGrid">
 	</div>  
 	<div class="but" style="margin-top: 10px;">
 		<canvas width=400 height=600 id="myCanvas"></canvas>
