--- a/story.html
+++ b/story.html
@@ -32,6 +32,7 @@
     </div>    
   </body>
   <script src="./public/reward.js"></script>
+  <script src="./public/stories.js"></script>
   <script src="./public/cchar.js"></script>
   <script src="./public/story.js"></script>
 </html>
